--- a/_posts/2017-08-15-Carthage.md
+++ b/_posts/2017-08-15-Carthage.md
@@ -3,14 +3,13 @@ layout: post
 title: Carthage安装及使用教程
 category: iOS
 tags: [iOS]
-
 ---
 
 
 > 第三方管理工具`Carthage`
 
 
-### 安装
+## 安装
 
 ```
 brew update
@@ -18,7 +17,7 @@ brew install carthage
 ```
 
 
-### 简介
+## 简介
 
 [Github地址](https://github.com/Carthage/Carthage.git)
 
@@ -30,7 +29,7 @@ brew install carthage
 carthage version
 ```
 
-### 替代`Cocoapods`在项目中使用`Carthage`
+## 替代`Cocoapods`在项目中使用`Carthage`
 
 
 * 在项目中创建`Carthage`文件`Cartfile`
@@ -65,7 +64,7 @@ carthage update --platform iOS
 // Carthage/Build/iOS里自动生成xxx.framework
 ```
 
-### Xcode使用
+## Xcode使用
 
 * 由上获得`xxx.framework`导入项目中
 
@@ -87,7 +86,7 @@ carthage update --platform iOS
 
 
 
-### 与Cocoapods不同点
+## 与Cocoapods不同点
 
 
 * `Carthage`只支持iOS 8及以上版本使用
