update mac study

--- a/_posts/2016-08-29-mac study.md
+++ b/_posts/2016-08-29-mac study.md
@@ -282,6 +282,41 @@ mdfind -onlyin ~/company/ "正在连接聊天服务器"
 mdfind -onlyin ~/company/ plist
 ```
 
+### 6.安装软件打开报错
+
+* 检查隐私里打开任意来源
+
+* 终端改写隐私来源设置
+
+```
+sudo spctl --master-disable
+```
+
+### 7.打开Mac OSX原生的NTFS功能
+
+
+* 每次使用时输入命令
+
+```
+diskutil list
+sudo vim /etc/fstab
+```
+
+* 编辑内容
+
+```
+LABEL=Win\040Ntfs\040Drive none ntfs rw,auto,nobrowse
+// \040代表空格
+```
+
+* 保存写入
+
+```
+sudo ln -s /Volumes ~/Desktop/Volumes
+```
+
+
+
 
 
 ## Linux学习
